--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
       </div>
       <div class="attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a href="https://www.frontendmentor.io/" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">webdev1264</a>.
+        >. Coded by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >webdev1264</a
+        >.
       </div>
     </div>
   </body>
