--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <a href="https://www.frontendmentor.io/" target="_blank"
           >Frontend Mentor</a
         >. Coded by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a href="https://github.com/webdev1264/FrontendMentor-QR-code" target="_blank"
           >webdev1264</a
         >.
       </div>
