--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="qr-card">
         <div class="qr-wrapper">
           <img src="images/image-qr-code.png" alt="qr-code" class="qr-img" />
@@ -88,15 +88,17 @@
           to the next level
         </p>
       </div>
-      <div class="attribution">
+      <footer class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io/" target="_blank"
           >Frontend Mentor</a
         >. Coded by
-        <a href="https://github.com/webdev1264/FrontendMentor-QR-code" target="_blank"
+        <a
+          href="https://github.com/webdev1264/FrontendMentor-QR-code"
+          target="_blank"
           >webdev1264</a
         >.
-      </div>
-    </div>
+      </footer>
+    </main>
   </body>
 </html>
